@@ -147,6 +147,7 @@
 #include "utils.h"
 #include "u_tree.h"
 #include "pbs_cpuset.h"
+#include "rpp.h"
 
 #include "mcom.h"
 
@@ -423,14 +424,14 @@ static unsigned long setsourcelogininteractive(char *);
 static unsigned long setspoolasfinalname(char *);
 static unsigned long setremchkptdirlist(char *);
 static unsigned long setmaxconnecttimeout(char *);
-static unsigned long aliasservername(char *);
+unsigned long aliasservername(char *);
 unsigned long jobstarter(char *value);
 #ifdef PENABLE_LINUX26_CPUSETS
 static unsigned long setmempressthr(char *);
 static unsigned long setmempressdur(char *);
 #endif
 static unsigned long setreduceprologchecks(char *);
-
+unsigned long rppthrottle(char *value);
 
 static struct specials
   {
@@ -497,6 +498,7 @@ static struct specials
   { "memory_pressure_duration",     setmempressdur },
 #endif
   { "reduce_prolog_checks",         setreduceprologchecks},
+  { "rpp_throttle", rppthrottle },
   { NULL,                  NULL }
   };
 
@@ -3078,6 +3080,21 @@ static unsigned long setlogfilemaxsize(
   }
 
 
+unsigned long rppthrottle(
+
+  char *value)  /* I */
+
+  {
+  long rpp_throttle_time;
+  rpp_throttle_time = strtol(value, NULL, 10);
+  /* call into Libifl to tell it what the sleep time is */
+  set_rpp_throttle_sleep_time(rpp_throttle_time);
+
+  return(rpp_throttle_time);
+  }
+
+
+
 
 
 static unsigned long setlogfilerolldepth(
@@ -3355,7 +3372,7 @@ static unsigned long setnospooldirlist(
   }  /* END setnospooldirlist() */
 
 
-static unsigned long aliasservername( char *value)
+unsigned long aliasservername( char *value)
   {
     log_record(
       PBSEVENT_SYSTEM,
